# cabal

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hlint.yaml  .readthedocs.yml  .typos-srcs.toml  .typos.toml  8.10.7.txt  8.6.5.txt  8.8.4.txt  9.0.2.txt  9.2.8.txt  9.4.8.txt  9.6.3.txt  9.8.1.txt  CONTRIBUTING.md  Makefile  _typos.toml  a.txt  api.mk  b.txt  build.txt  cabal.project  cabal.project.buildinfo  cabal.project.coverage  cabal.project.doctest  cabal.project.freeze  cabal.project.libonly  cabal.project.local  cabal.project.release  cabal.project.validate  cabal.project.validate.libonly  cabal.project.weeder  validate.sh
.github/workflows/: lint.yml  quick-jobs.yml  redundant-cpp.yml  typos.yml  users-guide.yml
Cabal/: Cabal.cabal
Cabal-syntax/: Cabal-syntax.cabal
Cabal-tests/: Cabal-tests.cabal
Cabal-tests/tests/: CheckTests.hs  ParserTests.hs  README.md
bootstrap/: cabal-bootstrap-gen.cabal
cabal-dev-scripts/: cabal-dev-scripts.cabal
cabal-dev-scripts/src/: GenSPDX.hs  GenSPDXExc.hs
cabal-install/: cabal-install.cabal
cabal-install-solver/: cabal-install-solver.cabal
cabal-testsuite/: cabal-testsuite.cabal  cabal.project
cabal-testsuite/PackageTests/Check/ConfiguredPackage/Fields/UnknownExtension/: cabal.out  cabal.test.hs  pkg.cabal
cabal-testsuite/PackageTests/InstallOneOfManyExes/: InstallOneOfManyExes.cabal  default-install.out  first-install.out  first-install.test.hs
cabal-testsuite/PackageTests/InstallOneOfManyExes/app-1/: Main.hs
cabal-testsuite/PackageTests/InstallOneOfManyExes/app-2/: Main.hs
cabal-testsuite/main/: cabal-tests.hs
cabal-validate/: cabal-validate.cabal
cabal-validate/main/: Main.hs
changelog.d/: issue-5993  issue-9578  pr-10546  pr-10728
doc/: Makefile  README.md  buildinfo-fields-reference.rst  cabal-commands.rst  cabal-package-description-file.rst  cabal-package-syntax.rst  cabal-package.rst  cabal-project-description-file.rst  conf.py  getting-started.rst  index.rst  pyproject.toml  requirements.txt
project-cabal/: README.md  ghc-options.config  pkgs.config
project-cabal/pkgs/: benchmarks.config  buildinfo.config  cabal.config  default.config  install.config  integration-tests.config  libonly.config  release.config  tests.config  validate-libonly.config  validate.config  weeder.config
release-notes/: WIP-cabal-install-3.12.x.0.md
scripts/: normalize-eol-eof.sh
solver-benchmarks/: HackageBenchmark.hs
templates/: Paths_pkg.template.hs
(+312 files in other folders)
