cabal-version: 3.0
name:          cabal-validate
version:       1.0.0
copyright:     2024-2024, Cabal Development Team (see AUTHORS file)
license:       BSD-3-Clause
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
synopsis:      An internal tool for building and testing the Cabal package manager
build-type:    Simple

common warnings
    ghc-options: -Wall

executable cabal-validate
    import: warnings
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        , NoFieldSelectors
        , DuplicateRecordFields
        , OverloadedRecordDot
        , TypeApplications
    ghc-options: -O -threaded -rtsopts -with-rtsopts=-N

    main-is: Main.hs
    hs-source-dirs: main

    build-depends:
        base >=4 && <5
        , ansi-terminal >=1 && <2
        , turtle >=1 && <2
        , optparse-applicative >=0.18 && <1
        , containers >=0.6 && <1
        , directory >=1.0 && <2
        , text >=2 && <3
        , terminal-size >=0.3 && <1
        , time >=1 && <2
