cabal-version:      3.0
name:               InstallOneOfManyExes
version:            0.1.0.0
license:            BSD-3-Clause
author:             Phil de Joux
build-type:         Simple

common warnings
    ghc-options: -Wall

executable first-of-many-exes
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app-1
    default-language: Haskell2010

executable second-of-many-exes
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app-2
    default-language: Haskell2010
