cabal-version: 3.0
name: pkg
synopsis: synopsis
description: description
version: 0
category: example
maintainer: none@example.com
license: GPL-3.0-or-later

common lang-extensions
  default-language: Haskell98
  default-extensions: VeryObliqueAngles

library
  import: lang-extensions
  exposed-modules: Module

executable exe
  import: lang-extensions
  hs-source-dirs: .
  main-is: Main.hs

test-suite file-upload-test
  import: lang-extensions
  type: exitcode-stdio-1.0
  hs-source-dirs: .
  main-is: Test.hs
